# University-labs-and-studying-projects

Cryptography labs/lab 2/: P1(A) odds.txt  P2(A) odds.txt  ShannonCoder_Class.py  main.py  metrics.py
Cryptography labs/lab 3/: HammingCoder_74.py  ShannonCoder_WithParity.py  main.py  metrics.py  parity_codec.py  uniform odds.txt
Cryptography labs/lab 4/: beaufort_cipher.py  decoding_test1.txt  main.py
Cryptography labs/lab 5/: Generators_and_Testers.py  main.py  test.txt  Крипта 5 отчет.docx
Cryptography labs/lab 6/: LehmannTester.py  main.py  Крипта 6 отчет.docx
My School 21 ML Lection (December 2025)/: school21_lection-Copy1.ipynb
My School 21 ML Lection (December 2025)/.ipynb_checkpoints/: school21_lection-Copy1-checkpoint.ipynb
Numerical Methods labs (February 2025 - December 2025)/Task #2.1. Cubic spline and finite difference/: cubic_spline.cpp  finite_difference.cpp  grid_generator.cpp  headers.h  main.cpp
Numerical Methods labs (February 2025 - December 2025)/Task #2.3. Smoothing Splines/: main.cpp  smoothing_spline.cpp  smoothing_spline.h  smoothing_spline.ipynb
Numerical Methods labs (February 2025 - December 2025)/Task #2.5 Simpson and Gauss Integrator/: Integrator.cpp
Numerical Methods labs (February 2025 - December 2025)/Task #4. SLAE_Solver/: CMakeLists.txt  LinearAlgebra.h  MatrixOperations.cpp
Numerical Methods labs (February 2025 - December 2025)/term 5/: lab2 graphs.ipynb  (+2 more)
OOP labs/: graphs.ipynb
System Alalysis labs/: lab 4 (Shopping mall survey).py
Хакатон АЛЬФА-БУДУЩЕЕ (December 2025)/: classes.py  pipeline.ipynb  pipeline.py
(+124 files in other folders)
